--- a/CVD_prevented/Report_CVD1.Rmd
+++ b/CVD_prevented/Report_CVD1.Rmd
@@ -13,54 +13,17 @@ output: pdf_document
 # classoption: landscape
 ---
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE)
 library(knitr)
 library(xtable)
 library(darthtools)
 library(ggplot2)
 ```
 
-
-# Results from the paper
-
-These two tables are from the result part of the paper by Yaqin Si.
-```{r message=FALSE}
-strategy_names <- c("strategy1", "strategy2", "strategy3")
-# QALY
-QALY <- data.frame("est" = c(498,691,654),
-                   "LB" = c(103,233,105),
-                   "UB" = c(894,194,1108))
-rownames(QALY) <- strategy_names
-# Prevent CVD events
-num_CVD <- data.frame("est" = c(298,374,346),
-                   "LB" = c(155,181,154),
-                   "UB" = c(441,567,538))
-rownames(num_CVD) <- strategy_names
-```
-
-```{r, echo=FALSE, results='asis'}
-t1 <- kable(QALY, format = "latex", booktabs = TRUE)
-t2 <- kable(num_CVD, format = "latex", booktabs = TRUE)
-cat(c("\\begin{table}[!htb]
-    \\begin{minipage}{.5\\linewidth}
-      \\caption{Increased QALY with no screening}
-      \\centering",
-        t1,
-    "\\end{minipage}%
-    \\begin{minipage}{.5\\linewidth}
-      \\centering
-        \\caption{Prevent CVD events}",
-        t2,
-    "\\end{minipage} 
-\\end{table}"
-))  
-```
-
-\newpage
 # Data and parameters
 ```{r, results='asis', message=FALSE}
 library(readr)
-rate_data <- read_csv("data/ghdx_data.csv")
+rate_data <- read_csv("../data/ghdx_data.csv")
 print(xtable(data.frame(rate_data),digits=c(0,0,0,6,6,6),
       caption = "Data from Global Health Data Exchange"),
       caption.placement="top")
@@ -68,14 +31,14 @@ print(xtable(data.frame(rate_data),digits=c(0,0,0,6,6,6),
 
 ```{r, results='asis', message=FALSE}
 library(readr)
-noStrategy_data <- read_csv("data/Normal_data.csv")
+noStrategy_data <- read_csv("../data/Normal_data.csv")
 print(xtable(data.frame(noStrategy_data),digits=c(0,0,0,0),
       caption = "Distribution of the population"),
       caption.placement="top")
 ```
 
 ```{r, results='asis', message=FALSE}
-population_data <- readr::read_csv("data/Normal3Stra_data.csv")
+population_data <- readr::read_csv("../data/Normal3Stra_data.csv")
 population_data <- data.frame(population_data)
 print(xtable(data.frame(population_data),digits=c(0,0,0,0,0,0,0),
       caption = "Distribution of the population under different strategies"),caption.placement="top")
@@ -84,7 +47,7 @@ print(xtable(data.frame(population_data),digits=c(0,0,0,0,0,0,0),
 \clearpage
 ```{r}
 ## General setup
-source("./function/transform_func.R")
+source("../function/transform_func.R")
 n_t <- 10   # time horizon, number of cycles
 # S1: live; S2: cvd; S3: cvdth; S4: oth_death
 v_names_states <- c("S1", "S2", "S3", "S4")  
@@ -112,22 +75,9 @@ p_ccvd_acvd <- rate_to_prob(rate_data$incidence*HR_cvdhistory_cvd, t=1)
 p_ccvd_cvdth <- rate_to_prob(rate_data$death_CVD*HR_cvdhistory_cvdth,t=1)
 set.seed(100)
 p_acvd_cvdth <- rep(runif(1,min=0.02,max=0.1),length=length(p_live_cvd))
-
-# half-cycle correction
-# corr_matrix <- matrix(1,nrow = 11,ncol = 4)
-# corr_matrix[1,] <- rep(0.5,4)
-# corr_matrix[11,] <- rep(0.5,4)
-# corr_matrix
 ```
 
 ### Component 1: A transition probability matrix $P_t$
-\begin{center}
-\includegraphics[width=8in]{TreeAge.jpg}
-\end{center}
-
-\begin{center}
-\includegraphics[width=6in]{Mat.png}
-\end{center}
 $$
 P_t=
 \begin{Bmatrix}
@@ -151,90 +101,6 @@ $P6= 1-(p\_ccvd\_cvdth+p\_ccvd\_acvd*p\_acvd\_cvdth)-p\_live\_oth\_death$
 
 $P5= p\_ccvd\_cvdth+p\_ccvd\_acvd*p\_acvd\_cvdth$
 
-# Strategy 0 (a male 40-45)
-
-In what follows, an example for the groups of male patients, aging from 40 to 45 is illustrated.
-```{r}
-###################### Construct state-transition models for Strategy1 #####################
-#### Create transition arrays ####
-a_P <- array(0, dim      = c(n_states, n_states, 10),
-                dimnames = list(v_names_states, v_names_states, 1:10))
-## From S1, S2, S3, S4
-a_P["S1", "S1", 1:5]   <- 1-(p_live_cvd[1]*(1-p_acvd_cvdth[1]) +
-                               p_live_cvdth[1]*p_live_cvd[1]*p_acvd_cvdth[1] +
-                               p_live_oth_death[1])
-a_P["S1", "S2", 1:5]  <- p_live_cvd[1]*(1-p_acvd_cvdth[1])
-a_P["S1", "S3", 1:5]   <- p_live_cvdth[1]*p_live_cvd[1]*p_acvd_cvdth[1]
-a_P["S1", "S4", 1:5]   <- p_live_oth_death[1]
-a_P["S2", "S1", 1:5] <- 0
-a_P["S2", "S2", 1:5] <- 1-p_live_oth_death[1]-
-  (p_ccvd_cvdth[1]+p_ccvd_acvd[1]*p_acvd_cvdth[1])
-a_P["S2", "S3", 1:5] <- p_ccvd_cvdth[1]+
-  p_ccvd_acvd[1]*p_acvd_cvdth[1]
-a_P["S2", "S4", 1:5] <- p_live_oth_death[1]
-a_P["S3", "S3", 1:5] <- 1
-a_P["S4", "S4", 1:5] <- 1
-
-## From S1, S2, S3, S4
-a_P["S1", "S1", 6:10] <-  1-(p_live_cvd[1+1]*(1-p_acvd_cvdth[1+1])+
-                               p_live_cvdth[1+1]*p_live_cvd[1+1]*p_acvd_cvdth[1+1] +
-                               p_live_oth_death[1+1])
-a_P["S1", "S2", 6:10]  <- p_live_cvd[1+1]*(1-p_acvd_cvdth[1+1])
-a_P["S1", "S3", 6:10]  <- p_live_cvdth[1+1]*p_live_cvd[1+1]*p_acvd_cvdth[1+1]
-a_P["S1", "S4", 6:10]  <- p_live_oth_death[1+1]
-a_P["S2", "S1", 6:10] <- 0
-a_P["S2", "S2", 6:10] <- 1-p_live_oth_death[1+1]-
-  (p_ccvd_cvdth[1+1]+p_ccvd_acvd[1+1]*p_acvd_cvdth[1+1])
-a_P["S2", "S3", 6:10] <- p_ccvd_cvdth[1+1]+p_ccvd_acvd[1+1]*p_acvd_cvdth[1+1]
-a_P["S2", "S4", 6:10] <-  p_live_oth_death[1+1]
-a_P["S3", "S3", 6:10] <- 1
-a_P["S4", "S4", 6:10] <- 1
-# is the constructed transition matrix in 10 cycles
-# depends on the specific population (age and gender)
-a_P  
-```
-
-### Component 2: The  cohort trace matrix $M$
-```{r fig.cap="For the group male aging from 40-45",fig.height=3.5}
-## Initial state vector: All starting healthy
-v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
-## Initialize cohort trace for Markov model 
-m_M <- matrix(0,nrow     = (n_t+1), ncol = n_states, 
-              dimnames = list(0:(n_t), v_names_states))
-m_M[1, ] <- v_s_init
-for(t in 1:10){
-  m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
-}
-m_M
-```
-\textcolor{red}{This matrix is the trace matrix of the specific population (male, 40-45) during these 10 cycles. The whole cohort starts in $S1$ state and transitions to the rest of the states over time.}
-
-```{r}
-
-CVD_per_person <- sum(m_M[,1]* p_live_cvd[1])
-CVD_per_person
-
-# calculation of the per CVD prevented events
-CVD_prevented <- matrix(NA,nrow=14,ncol=1)
-
-for(i in 1:14){
-  CVD_prevented[i] <- sum(m_M[,1]*p_live_cvd[i])
-}
-CVD_prevented
-strategy3_noscren_CVD <- matrix(CVD_prevented[c(1,2,8,9)],ncol=2,nrow=2)
-colnames(strategy3_noscren_CVD) <- c("male","female")
-rownames(strategy3_noscren_CVD) <- c("40","45")
-```
-
-```{r}
-result_strategy0 <- matrix(NA,nrow=1,ncol=1)
-colnames(result_strategy0) <- c("strategy0")
-
-result_strategy0 <- sum(noStrategy_data$num * as.numeric(CVD_prevented))
-result_strategy0
-```
-
-\textcolor{red}{This is the CVD events for the general population.}
 
 
 \newpage
@@ -277,7 +143,7 @@ Item & & CVD incidence(HR) & CVD cause-specific mortality (HR)  \\
 & {Medium risk}  & `r HR_m_stg2` &  1\\
 & {High risk}  &`r HR_h_stg2`  &  1.7\\
 \hline
-\multirow{3}{6em}{Strategy 3}& {Low risk}  & `r HR_l_stg1` & 1 \\
+\multirow{3}{6em}{Strategy 3}& {Low risk}  & `r HR_l_stg3` & 1 \\
 & {Medium risk}  & `r HR_m_stg3` &  1\\
 & {High risk}  & `r HR_h_stg3` &  1.7\\
 \hline
@@ -312,11 +178,6 @@ p_live_cvdth_h <- ProbFactor(p_live_cvdth,1.7*
 p_ccvd_acvd <- ProbFactor(p_live_cvd,HR_cvdhistory_cvd) 
 p_ccvd_cvdth <- ProbFactor(p_live_cvdth,HR_cvdhistory_cvdth)
 ```
-
-\begin{center}
-\includegraphics[width=6in]{Mat.png}
-\end{center}
-
 
 
 Thus, we take the example of individuals in the low level
@@ -498,7 +359,7 @@ CVD_prevented_h <- sum(m_M[,1]*p_live_cvd_h[1])
 CVD_prevented_h
 ```
 
-\textcolor{red}{We perform the same procedure for all risk levels: low, medium and high, and then obtain the following tables for the health benefit results.}
+\textcolor{red}{We perform the same procedure for all risk levels under Strategy1: low, medium and high, and then obtain the following tables for the probability of transitioning from S1 to S2.}
 
 \begin{table}[htbp]
 \centering
@@ -514,11 +375,9 @@ High risk & `r CVD_prevented_h`\\
 \end{tabular}
 \end{table}
 
-\textcolor{red}{When compared what we calculated before, the number of CVD events udner Strategy 0 is `r CVD_prevented`, we may conclude that screening could help to prevent the CVD events under all three risk groups in the specific age and gender group.}
-
 \newpage
 
-# Health benefits of Strategy1 
+# Prevented CVD events under Strategy1 
 ```{r}
 CVD_prevented_h <- matrix(NA,nrow=14,ncol=1)
 # i specify the group of male patients (age)
@@ -1016,33 +875,15 @@ print(xtable(res,digits=c(0,0,0,3,3,3),
 
 
 ```{r}
-# loop for 3 strategies
-pop_dat <- data.frame(cbind(population_data$low,
-                            population_data$medium,
-                            population_data$high))
-cvd_dat <- data.frame(cbind(as.numeric(res$low),
-                            as.numeric(res$medium),
-                            as.numeric(res$high)))
-result <- matrix(NA,nrow=1,ncol=3)
-colnames(result) <- c("strategy1","strategy2","strategy3")
-
-for(i in 1:3){ # strategy: strategy1 strategy2 strategy3
-  for (x in 1:14){ # gender and age
-  for (y in 1:3) {   # risk: low medium high
-    perstr <- sum(pop_dat[x*i,y] * cvd_dat[x,y])
-  }
-  }
-  result[i] <- perstr
-}
-# for strategy3, there is no screening for patients aged from 40-50
-strategy3_noscreen <- cbind(c(229,444),c(498,856))
-colnames(strategy3_noscreen) <- c("male","female")
-rownames(strategy3_noscreen) <- c("40","45")
-strategy3_noscreen
-strategy3_noscren_CVD
-result[3] <- result[3] + sum(strategy3_noscreen*strategy3_noscren_CVD)
-result
+population_data_strategy1 <- population_data[which(population_data$strategy=="strategy1"),
+                                             c("low","medium","high")]
+cvd_dat_strategy1 <- data.frame(cbind(as.numeric(as.character(res$low)),
+                            as.numeric(as.character(res$medium)),
+                            as.numeric(as.character(res$high))))
+result_strategy1 <- sum(population_data_strategy1*cvd_dat_strategy1)
+result_strategy1
 ```
+
 
 \textcolor{red}{This is the result for the CVD events under 3 different strategies}
 
